ADD JWT Token Functionality
Users are now passed back a token when they log-in.
This token will be used to access certain api endpoints

--- a/FirstProject/nodetest1/package.json
+++ b/FirstProject/nodetest1/package.json
@@ -1,10 +1,16 @@
 {
     "name" : "starter-node-angular",
     "main" : "server.js",
-    "dependencies":{
+    "dependencies": {
         "express" : "*",
         "mongoose":"*",
+        "bcrypt-nodejs" : "*",
+        "jsonwebtoken" : "*",
+
         "body-parser":"*",
-        "method-override":"*"
+        "cookie-parser" : "*",
+        "method-override":"*",
+        "morgan":"*",
+        "express-session" : "*"
     }
 }
